// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render WelcomeMessage with empty string 1`] = `
<section>
  <h2
    className="heading-secondary welcome-message"
  >
    
  </h2>
  
</section>
`;

exports[`Render WelcomeMessage with text 1`] = `
<section>
  <h2
    className="heading-secondary welcome-message"
  >
    test heading
  </h2>
  
</section>
`;
